btn padding and align fix

--- a/konyv-kemping/src/App.css
+++ b/konyv-kemping/src/App.css
@@ -114,6 +114,7 @@ select {
   bottom: 5%;
   box-shadow: 0 0 5px #6646a2;
   opacity: 0.5;
+  padding: 0.75rem !important;
 }
 
 .back-to-top-btn:hover {
